Account listing | TFX-118 [MINICASHER] Account manager page

--- a/src/TfxMiniCasherWwwUI/src/index.html
+++ b/src/TfxMiniCasherWwwUI/src/index.html
@@ -9,6 +9,9 @@
   <link rel="stylesheet" type="text/css" href="css/app.css" />
   <link rel="stylesheet" type="text/css" href="http://static.tforce.xyz/font-awesome--5/css/font-awesome.min.css" />
   <script type="text/javascript" src="js/app.js"></script>
+  <script>
+    window.SERVICE_ROOT = 'http://localhost:17000'
+  </script>
 </head>
 <body>
   <app-root></app-root>
