--- a/src/TfxMiniCasherWwwUI/src/index.html
+++ b/src/TfxMiniCasherWwwUI/src/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" type="text/css" href="css/app.css" />
-  <link rel="stylesheet" type="text/css" href="http://static.tforce.xyz/font-awesome--5/css/font-awesome.min.css" />
+  <link rel="stylesheet" type="text/css" href="http://static.local/font-awesome--5/css/font-awesome.min.css" />
   <script type="text/javascript" src="js/app.js"></script>
   <script>
     window.SERVICE_ROOT = 'http://localhost:17000'
